--- a/index.html
+++ b/index.html
@@ -11,15 +11,27 @@
 <body>
     <!-- 主页面 -->
     <div id="app" v-cloak>
-        This is my github pages.
-        <br>
-        My name is Ricky C..
-        <br>
-        今天是几号呢?
-        <br>
-        {{time}}
-        <br>
-        123, 321, lululalalei
+        <div>
+            This is my github pages.
+            <br>
+            My name is Ricky C..
+            <br>
+            今天是几号呢?
+            <br>
+            {{time}}
+            <br>
+            123, 321, lululalalei
+        </div>
+        <div style="margin-top:20px;">
+            前端: HTML5, CSS, JavaScript, Vue.js, 微信小程序, 微信小游戏, Kotlin, Swift, React, Angular
+        </div>
+        <div>
+            后端: PHP, Python, Go, Node.js, Ruby, Django, ThinkPHP, Laravel, Java, .NET, MySQL, Redis, MongoDB, Linux
+        </div>
+        <div>
+            其他: Git
+        </div>
+
     </div>
     <!-- /主页面 -->
 </body>
