--- a/index.html
+++ b/index.html
@@ -6,30 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ricky's Github Pages</title>
     <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="//static.class4ever.com/bootstrap/v4.3.1/css/bootstrap.min.css">
 </head>
 
 <body>
     <!-- 主页面 -->
-    <div id="app" v-cloak>
-        <div>
-            This is my github pages.
-            <br>
-            My name is Ricky C..
-            <br>
-            今天是几号呢?
-            <br>
-            {{time}}
-            <br>
-            123, 321, lululalalei
+    <div id="app" v-cloak style="width:800px;padding:20px;">
+        <div class="card">
+            <div class="card-body">
+                This is my github pages.
+                <br>
+                My name is Ricky C..
+                <br>
+                今天是几号呢?
+                <br>
+                {{time}}
+                <br>
+                123, 321, lululalalei
+            </div>
         </div>
-        <div style="margin-top:20px;">
-            前端: HTML5, CSS, JavaScript, Vue.js, 微信小程序, 微信小游戏, Kotlin, Swift, React, Angular
-        </div>
-        <div>
-            后端: PHP, Python, Go, Node.js, Ruby, Django, ThinkPHP, Laravel, Java, .NET, MySQL, Redis, MongoDB, Linux
-        </div>
-        <div>
-            其他: Git
+
+        <div class="card">
+            <div class="card-body">
+                <div style="margin-top:20px;">
+                    前端: HTML5, CSS, JavaScript, Vue.js, 微信小程序, 微信小游戏, Kotlin, Swift, React, Angular
+                </div>
+                <div>
+                    后端: PHP, Python, Go, Node.js, Ruby, Django, ThinkPHP, Laravel, Java, .NET, MySQL, Redis, MongoDB,
+                    Linux
+                </div>
+                <div>
+                    其他: Git
+                </div>
+            </div>
         </div>
 
     </div>
@@ -37,8 +46,9 @@
 
     123 321 1345678
 </body>
-
-
+<script src="https://cdn.staticfile.org/popper.js/1.15.0/umd/popper.min.js"></script>
+<script src="//static.class4ever.com/jquery/jquery-3.4.1.min.js"></script>
+<script src="//static.class4ever.com/bootstrap/v4.3.1/js/bootstrap.min.js"></script>
 <script src="//static.class4ever.com/vuejs/v2.6.10/vue.min.js"></script>
 <script src="app.js"></script>
 
