--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <div class="card">
             <div class="card-body">
-                <div style="margin-top:20px;">
+                <div>
                     前端: HTML5, CSS, JavaScript, Vue.js, 微信小程序, 微信小游戏, Kotlin, Swift, React, Angular
                 </div>
                 <div>
