--- a/mark/index.html
+++ b/mark/index.html
@@ -11,17 +11,19 @@
 
 <body>
     <div id="app">
-        <h2>The Class4ever.com/mark Language</h2>
+        <h2>The Class4ever.com Slashmark Language</h2>
+        <p>URI: http://class4ever.com/mark</p>
+        <p>Version: 0.1</p>
 
         <div class="line">
-            <!-- csm代码 -->
+            <!-- slashmark代码 -->
             <div style="border:0;">
                 <div class="show" style="padding-right:22px;">
                     <textarea style="width:100%;height:99%;font-size:20px;" v-model="slashMark"></textarea>
                 </div>
-                <div class="title">/mark 代码</div>
+                <div class="title">Slashmark 代码</div>
             </div>
-            <!-- /csm代码 -->
+            <!-- /slashmark代码 -->
 
             <!-- 呈现样式 -->
             <div>
