--- a/mark/index.html
+++ b/mark/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>The Class4ever.com/mark Language</title>
+    <title>The Class4ever.com Slashmark Language</title>
     <link rel="stylesheet" href="app.css">
     <link rel="stylesheet" href="//static.class4ever.com/highlight.js/v9.18.1/style/ricky.css">
 </head>
