--- a/admin_ui/index.html
+++ b/admin_ui/index.html
@@ -59,7 +59,7 @@
 
         .uri {
             display: inline-block;
-            width: 210px;
+            width: 250px;
             z-index: 999;
             margin-left: -10px;
             background: #fff;
@@ -80,8 +80,8 @@
                 <span>URI: </span>
 
                 <!-- Target -->
-                <input id="uri" value="http://class4ever.com/admin_ui" style="width:1px;height:1px;z-index:1;">
-                <span class="uri">http://class4ever.com/admin_ui</span>
+                <input id="uri" value="https://pages.class4ever.com/admin_ui" style="width:1px;height:1px;z-index:1;">
+                <span class="uri">https://pages.class4ever.com/admin_ui</span>
                 <!-- Trigger -->
                 <button class="btn-copy" data-clipboard-target="#uri" onclick="layer.msg('已复制')">
                     复制
