--- a/admin_ui/admin2/index.html
+++ b/admin_ui/admin2/index.html
@@ -1,21 +1,34 @@
-
 <!doctype html>
 <html lang="en">
 
-	<head>
-		<meta charset="UTF-8">
-		<title>估价系统后台管理系统</title>
-		<meta name="renderer" content="webkit|ie-comp|ie-stand">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
-		<meta http-equiv="Cache-Control" content="no-siteapp" />
-		<!-- <link rel="stylesheet" href="//_price.class4ever.com/static/admin/static/css/font.css"> -->
-		<link rel="stylesheet" href="//_price.class4ever.com/static/admin/static/css/weadmin.css">
-		<script type="text/javascript" src="//_price.class4ever.com/static/admin/lib/layui/layui.js" charset="utf-8"></script>
+<head>
+	<meta charset="UTF-8">
+	<title>估价系统后台管理系统</title>
+	<meta name="renderer" content="webkit|ie-comp|ie-stand">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<meta name="viewport"
+		content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
+	<meta http-equiv="Cache-Control" content="no-siteapp" />
 
-	</head>
 
-	<body>
+	<link rel="stylesheet" href="admin.css">
+	<link rel="stylesheet" href="css/font.css">
+
+	<link rel="stylesheet" href="//static.class4ever.com/layui/v2.5.5/css/layui.css">
+	<script src="//static.class4ever.com/layui/v2.5.5/layui.all.js"></script>
+
+	<script src="admin.js"></script>
+
+
+
+
+</head>
+
+<body>
+
+	<div id="app">
+
+
 		<!-- 顶部开始 -->
 		<div class="container">
 			<div class="logo">
@@ -24,11 +37,11 @@
 			<div class="left_open">
 				<i title="展开左侧栏" class="iconfont">&#xe699;</i>
 			</div>
-			
+
 			<ul class="layui-nav right" lay-filter="">
 				<li class="layui-nav-item">
 					<a href="javascript:;">Admin</a>
-					<!-- <dl class="layui-nav-child">
+					<dl class="layui-nav-child">
 						<dd>
 							<a onclick="WeAdminShow('个人信息','http://www.baidu.com')">个人信息</a>
 						</dd>
@@ -38,7 +51,7 @@
 						<dd>
 							<a class="loginout" href="login.html">退出</a>
 						</dd>
-					</dl> -->
+					</dl>
 				</li>
 				<li class="layui-nav-item to-index">
 					<a href="/">前台首页</a>
@@ -50,550 +63,33 @@
 		<!-- 左侧菜单开始 -->
 		<div class="left-nav">
 			<div id="side-nav">
+
 				<ul id="nav">
-										<li>
+					<li v-for="(v,k) in menu">
 						<a href="javascript:;">
-							<cite>询价立项管理</cite>
+							<cite>{{v.title}}</cite>
 							<i class="iconfont nav_right">&#xe697;</i>
 						</a>
 						<ul class="sub-menu">
-														<li>
+							<li>
 								<a _href="/admin/Inquiry/index">
 									<i class="iconfont">&#xe6a7;</i>
 									<cite>询价</cite>
 								</a>
 							</li>
-														<li>
+							<li>
 								<a _href="/admin/project/index">
 									<i class="iconfont">&#xe6a7;</i>
 									<cite>报告立项</cite>
 								</a>
 							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>支持中心</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="/admin/expert/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>合作项目调度</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/articlex/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>关注项目</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/course/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>被关注项目</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>我的项目</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="/admin/video/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>外业管理</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/qna/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>内页分配</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/qnacat/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>审核调度</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/question/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>估价作业</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/index/welcome">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>项目审核</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/category/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>报告打印装订</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/website/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>报告发送</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="https://tongji.baidu.com">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>预估转正</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/contact/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>项目变更</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/coefrem/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>变更审批</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/userx/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>撤销与退费</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/website/editpassword">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>撤销审批</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/menu/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>免收申请</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>应收金额审批</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>免收审批</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>项目反馈</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>消息提醒</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>应收审批复核</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>免收审批复核</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>项目管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>数据查看</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>综合查询</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>综合查询配置</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>档案管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>档案销毁</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>档案盒管理</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>报告归档</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>财务管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>收费确认</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>出纳复核</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>项目收费</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>项目退费</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>汇款信息</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>汇款领取</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>票据管理</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>应收账款</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>市场管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>应收账款</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>确认收费责任</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>客户管理</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>报表管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>财务报表</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>变更报表</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>审核报表</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>外业报表</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>业绩报表</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>业务台账</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<li>
-						<a href="javascript:;">
-							<cite>系统管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>权限管理</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>报表模板管理</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>外业后台</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>公司参数设置</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>工作流配置</cite>
-								</a>
-							</li>
-														<li>
-								<a _href="/admin/menu/index">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>菜单管理</cite>
-								</a>
-							</li>
-													</ul>
-					</li>
-										<!-- <li>
-						<a href="javascript:;">
-							<i class="iconfont">&#xe705;</i>
-							<cite>帖子管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a _href="/admin/article/index.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>deal列表</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="/admin/article/lifestyle.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>liftstyle列表</cite>
-								</a>
-							</li>
 						</ul>
 					</li>
-					<li>
-						<a href="javascript:;">
-							<i class="iconfont">&#xe723;</i>
-							<cite>商品管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a _href="/admin/market/index.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>market列表</cite>
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="javascript:;">
-							<i class="iconfont">&#xe723;</i>
-							<cite>订单管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a _href="/admin/order/index.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>订单列表</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="/admin/order/putforward.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>提现列表</cite>
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="javascript:;">
-							<i class="iconfont">&#xe726;</i>
-							<cite>管理员管理</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a _href="/admin/admin/index.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>管理员列表</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="/admin/admin/role.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>角色管理</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="/admin/admin/permission.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>权限管理</cite>
-								</a>
-							</li>
-						</ul>
-					</li>
-					<li>
-						<a href="javascript:;">
-							<i class="iconfont">&#xe6ce;</i>
-							<cite>系统统计</cite>
-							<i class="iconfont nav_right">&#xe697;</i>
-						</a>
-						<ul class="sub-menu">
-							<li>
-								<a _href="./pages/echarts/echarts1.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>拆线图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts2.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>柱状图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts3.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>地图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts4.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>饼图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts5.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>雷达图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts6.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>k线图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts7.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>热力图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts8.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>仪表图</cite>
-								</a>
-							</li>
-							<li>
-								<a _href="./pages/echarts/echarts9.html">
-									<i class="iconfont">&#xe6a7;</i>
-									<cite>地图DIY实例</cite>
-								</a>
-							</li>
-						</ul>
-					</li> -->
 				</ul>
 			</div>
 		</div>
-		<!-- <div class="x-slide_left"></div> -->
 		<!-- 左侧菜单结束 -->
-		
+
 		<!-- 右侧主体开始 -->
 		<div class="page-content">
 			<div class="layui-tab tab" lay-filter="wenav_tab" id="WeTabTip" lay-allowclose="true">
@@ -602,7 +98,8 @@
 				</ul>
 				<div class="layui-tab-content">
 					<div class="layui-tab-item layui-show">
-						<iframe src="/admin/index/welcome.html" frameborder="0" scrolling="yes" class="weIframe"></iframe>
+						<iframe src="/admin/index/welcome.html" frameborder="0" scrolling="yes"
+							class="weIframe"></iframe>
 					</div>
 				</div>
 			</div>
@@ -610,23 +107,47 @@
 		<div class="page-content-bg"></div>
 		<!-- 右侧主体结束 -->
 		<!-- 中部结束 -->
-		<!-- 底部开始 -->
-		<div class="footer">
-			<div class="copyright">Copyright ©2020 估价系统</div>
-		</div>
-		<!-- 底部结束 -->
 		<script type="text/javascript">
 			layui.config({
-			  base: '/static/admin/static/js/'
-			  ,version: '101100'
+				base: './'
+				, version: '101100'
 			}).use('admin');
 		</script>
-	</body>
-	<!--Tab菜单右键弹出菜单-->
-	<ul class="rightMenu" id="rightMenu">
-        <li data-type="fresh">刷新</li>
-        <li data-type="current">关闭当前</li>
-        <li data-type="other">关闭其它</li>
-        <li data-type="all">关闭所有</li>
-    </ul>
+	</div>
+</body>
+<!--Tab菜单右键弹出菜单-->
+<ul class="rightMenu" id="rightMenu">
+	<li data-type="fresh">刷新</li>
+	<li data-type="current">关闭当前</li>
+	<li data-type="other">关闭其它</li>
+	<li data-type="all">关闭所有</li>
+</ul>
+
+
 </html>
+<script src="//static.class4ever.com/vuejs/v2.6.10/vue.min.js"></script>
+<script>
+	//Vue
+	const app = new Vue({
+		el: '#app',
+		data: {
+			menu: {
+				0: {
+					title: '第一个菜单',
+					children: {
+						0: {
+							title: '首页',
+							uri: "//www.baidu.com"
+						}
+					}
+				},
+				1: {
+					title: "第二个菜单"
+				},
+				2: {
+					title: '第三个菜单'
+				}
+			}
+		}
+	})
+</script>
