--- a/admin_ui/index.html
+++ b/admin_ui/index.html
@@ -93,7 +93,8 @@
             </div>
             <div>
                 <span>Version:</span>
-                0.1 更新日志
+                0.2 
+                <a href="//blog.class4ever.com/2352.html" target="_blank">更新日志</a>
             </div>
         </div>
         <!-- /标题卡片 -->
@@ -104,9 +105,9 @@
                 演示
             </div>
             <div class="card-body">
-                <a href="admin" class="layui-btn layui-btn-primary" target="_blank">1级菜单版</a>
+                <a href="admin" target="_blank" class="layui-btn layui-btn-primary">1级菜单版</a>
                 <button class="layui-btn layui-btn-primary">2级菜单版</button>
-                <button class="layui-btn layui-btn-primary">登录页面</button>
+                <a href="login" target="_blank" class="layui-btn layui-btn-primary">登录页面</a>
             </div>
         </div>
         <!-- /演示卡片 -->
