--- a/admin_ui/admin/index.html
+++ b/admin_ui/admin/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="app.css">
-    <base target="main-frame">
 </head>
 
 <body>
@@ -16,67 +15,24 @@
             <div class="site-title">
                 {{siteName}}
             </div>
-            <!-- /网站标题 -->
-
             <!-- 网站菜单 -->
-            <div v-for="(v,k) in menu" @click="activeKey=k" :class="activeKey == k ? 'menu-active' : 'menu'">
+            <div v-for="(v,k) in menu" @click="goto(k)" :class="'/' + v.path == $route.path ? 'menu-active' : 'menu'">
                 <div>
                     {{v.title}}
                 </div>
             </div>
-            <!-- /网站菜单 -->
         </div>
-        <!-- /左侧菜单 -->
 
         <!-- 右侧内容 -->
-        <div>
-            <iframe :src="menu[activeKey].uri" frameborder="0" style="height:100%;" class="main-frame"
-                name="main-frame"></iframe>
+        <div style="width:100%;">
+            <!-- 路由出口 -->
+            <router-view></router-view>
         </div>
-        <!-- /右侧内容 -->
     </div>
 </body>
-<script src="//static.class4ever.com/jquery/jquery-3.4.1.min.js"></script>
-<script src="//static.class4ever.com/vuejs/v2.6.10/vue.min.js"></script>
-<script>
-    const site = {
-        title: 'Class4ever Admin UI',
-        menu: {
-            0: {
-                title: '首页',
-                uri: 'home.html'
-            },
-            1: {
-                title: '搜狗',
-                uri: 'https://www.sogou.com'
-            },
-            2: {
-                title: '360搜索',
-                uri: 'https://www.so.com'
-            },
-            3: {
-                title: 'MSDN,我告诉你',
-                uri: 'https://msdn.itellyou.cn/'
-            },
-            4: {
-                title: '宝塔面板',
-                uri: 'https://www.bt.cn'
-            },
-            5: {
-                title: 'w3school',
-                uri: 'https://www.w3school.com.cn/'
-            },
-            6: {
-                title: 'CSDN',
-                uri: 'https://www.csdn.net'
-            },
-            7: {
-                title: '百度',
-                uri: 'https://www.baidu.com'
-            }
-        }
-    }
-</script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.min.js"></script>
+<script src="data.js"></script>
 <script src="app.js"></script>
 
 </html>
