--- a/admin/index.html
+++ b/admin/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="//static.class4ever.com/layui/v2.5.5/css/layui.css">
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
@@ -38,18 +38,19 @@
             <!-- 网站菜单 -->
             <template v-for="(v,k) in menu">
                 <!-- 一级菜单 -->
-                <div @click="goto(k)" :class="'/' + v.path == $route.path ? 'menu-active' : 'menu'">
+                <div @click="goto(v.path)" :class="'/' + v.path == $route.path ? 'menu-active' : 'menu'">
                     <div>
                         {{v.title}}
                         <!-- 有下级菜单的情况 -->
                         <span v-if="v.children!=undefined" style="float:right;padding-right:15px;">
-                            <i class="layui-icon layui-icon-down" style="font-size: 10px; "></i>
+                            <i v-if="pathOpen==v.path" class="layui-icon layui-icon-up" style="font-size: 10px; "></i>
+                            <i v-else class="layui-icon layui-icon-down" style="font-size: 10px; "></i>
                         </span>
                     </div>
                 </div>
                 <!-- 二级菜单 -->
-                <div @click="goto(kk)" v-if="v.children!=undefined" v-for="(vv,kk) in v.children"
-                    :class="'/' + vv.path == $route.path ? 'menu-sub-active' : 'menu-sub'">
+                <div @click="goto(vv.path)" v-if="v.children!=undefined && pathOpen==v.path"
+                    v-for="(vv,kk) in v.children" :class="'/' + vv.path == $route.path ? 'menu-active' : 'menu-sub'">
                     <div>
                         {{vv.title}}
                     </div>
@@ -69,6 +70,6 @@
 <script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.min.js"></script>
 <script src="//static.class4ever.com/layui/v2.5.5/layui.all.js"></script>
 <script src="data.js"></script>
-<script src="app.js"></script>
+<script src="index.js"></script>
 
 </html>
