--- a/admin_ui/index.html
+++ b/admin_ui/index.html
@@ -1,125 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Class4ever Admin UI</title>
     <link rel="stylesheet" href="//static.class4ever.com/layui/v2.5.5/css/layui.css">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        body {
-            padding: 20px;
-        }
-
-        .card {
-            border: 1px solid #aaa;
-            border-radius: 5px;
-            margin: 0 0 20px;
-        }
-
-        .card-single {
-            padding: 20px;
-        }
-
-        .card-title {
-            padding: 10px;
-            font-size: 20px;
-        }
-
-        .card-body {
-            padding: 10px;
-        }
-
-        .card:not(.card-single)>div:not(:last-child) {
-            border-bottom: 1px solid #aaa;
-        }
-
-        .page {
-            width: 800px;
-            margin: 0 auto;
-        }
-
-        .title>div {
-            margin: 7px 0;
-            font-size: 15px;
-        }
-
-        .btn-copy {
-            padding: 2px 4px;
-        }
-
-        .btn-copy:hover {
-            cursor: pointer;
-        }
-
-        .uri {
-            display: inline-block;
-            width: 250px;
-            z-index: 999;
-            margin-left: -10px;
-            background: #fff;
-            border: 1px solid #999;
-            padding: 4px 8px;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <div class="page">
-        <!-- 标题卡片 -->
-        <div class="card card-single title">
-            <h2 style="font-size:30px;">Class4ever Admin UI</h2>
-            <div style="color:#444;">基于Vue.js和jQuery的后台样式模板</div>
-        
-            <div>
-                <span>URI: </span>
+    <div id="app">
+        <!-- 左侧菜单 -->
+        <div class="side-bar" v-cloak>
+            <!-- 网站标题 -->
+            <div class="site-title">
+                {{siteName}}
+            </div>
+            <!-- 管理员控制 -->
+            <div class="admin-line">
+                <!-- 显示按钮 -->
+                <template v-if="adminBar==true">
+                    <div class="admin-control" @click="adminBar=false">
+                        <i class="layui-icon layui-icon-up" style="font-size: 10px;"></i>
+                    </div>
+                    <div style="padding:5px 0;">
+                        <button class="layui-btn layui-btn-sm">管理员密码</button>
+                        <button @click="logOut" class="layui-btn layui-btn-danger layui-btn-sm">退出</button>
+                    </div>
+                </template>
+                <!-- 隐藏按钮 -->
+                <template v-else>
+                    <div class="admin-control" @click="adminBar=true">
+                        <i class="layui-icon layui-icon-down" style="font-size: 10px;"></i>
+                    </div>
+                </template>
+            </div>
+            <!-- 网站菜单 -->
+            <template v-for="(v,k) in menu">
+                <!-- 一级菜单 -->
+                <div @click="goto(v.path)" :class="'/' + v.path == $route.path ? 'menu-active' : 'menu'">
+                    <div>
+                        {{v.title}}
+                        <!-- 有下级菜单的情况 -->
+                        <span v-if="v.children!=undefined" style="float:right;padding-right:15px;">
+                            <i v-if="pathOpen==v.path" class="layui-icon layui-icon-up" style="font-size: 10px; "></i>
+                            <i v-else class="layui-icon layui-icon-down" style="font-size: 10px; "></i>
+                        </span>
+                    </div>
+                </div>
+                <!-- 二级菜单 -->
+                <div @click="goto(vv.path)" v-if="v.children!=undefined && pathOpen==v.path"
+                    v-for="(vv,kk) in v.children" :class="'/' + vv.path == $route.path ? 'menu-active' : 'menu-sub'">
+                    <div>
+                        {{vv.title}}
+                    </div>
+                </div>
 
-                <!-- Target -->
-                <input id="uri" value="https://pages.class4ever.com/admin_ui" style="width:1px;height:1px;z-index:1;">
-                <span class="uri">https://pages.class4ever.com/admin_ui</span>
-                <!-- Trigger -->
-                <button class="btn-copy" data-clipboard-target="#uri" onclick="layer.msg('已复制')">
-                    复制
-                </button>
-            </div>
-            <div style="margin-top:30px;">
-                <button class="layui-btn layui-btn-lg">立即下载</button>
-                <button class="layui-btn layui-btn-primary layui-btn-lg">码云</button>
-            </div>
-            <div>
-                <span>Version:</span>
-                0.2 
-                <a href="//blog.class4ever.com/2352.html" target="_blank">更新日志</a>
-            </div>
+            </template>
         </div>
-        <!-- /标题卡片 -->
 
-        <!-- 演示卡片 -->
-        <div class="card">
-            <div class="card-title">
-                演示
-            </div>
-            <div class="card-body">
-                <a href="admin" target="_blank" class="layui-btn layui-btn-primary">1级菜单版</a>
-                <button class="layui-btn layui-btn-primary">2级菜单版</button>
-                <a href="login" target="_blank" class="layui-btn layui-btn-primary">登录页面</a>
-            </div>
+        <!-- 右侧内容 -->
+        <div style="width:100%;">
+            <!-- 路由出口 -->
+            <router-view></router-view>
         </div>
-        <!-- /演示卡片 -->
-
-
     </div>
 </body>
-<script src="//static.class4ever.com/clipboard.js/v2.0.4/clipboard.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+<script src="https://unpkg.com/vue-router@3.1.6/dist/vue-router.min.js"></script>
 <script src="//static.class4ever.com/layui/v2.5.5/layui.all.js"></script>
-<script src="//static.class4ever.com/jquery/jquery-3.4.1.min.js"></script>
-<script>
-    new ClipboardJS('.btn-copy');
-</script>
+<script src="data.js"></script>
+<script src="index.js"></script>
 
 </html>
