--- a/index.html
+++ b/index.html
@@ -67,6 +67,11 @@
                     可转为
                     <span>{{time2}}</span>
                 </p>
+                <p>
+                    <!-- 北京时间转时间戳: -->
+                    <!-- <input type="text" v-model="tm"> -->
+                    <!-- 可 -->
+                </p>
             </div>
         </div>
 
